Fix the z-index of the help button

--- a/src/main/resources/assets/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
+++ b/src/main/resources/assets/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
@@ -182,7 +182,6 @@
     top: 9px;
     padding: 0 14px 0 10px;
     overflow: hidden;
-    z-index: @z-index-mask - 2;
     cursor: pointer;
 
     &:after {
